Update tag order in tag-data.json, add Introduction component, and remove ExternalLink and SilhouetteHover components

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
 
 @layer base {
     :root {
+        --color-dark-dark: #141517;
+        --color-white: #ffffff;
+
         --background: 0 0% 100%;
         --foreground: 0 0% 3.9%;
 
@@ -186,4 +189,164 @@ svg[width='1372'] {
 /* <Box> styling */
 .my-6.rounded-lg.p-4.bg-secondary.text-center ul {
     @apply m-0;
+}
+
+.rounded-div-wrap {
+    width: 100%;
+    top: 0;
+    position: relative;
+    height: 10vh;
+    overflow: hidden;
+}
+
+.rounded-div {
+    width: 150%;
+    content: '';
+    display: block;
+    position: absolute;
+    background: var(--color-white);
+    height: 750%;
+    left: 50%;
+    border-radius: 50%;
+    transform: translate(-50%, -86.666%);
+    z-index: 1;
+}
+
+.no-scroll-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 900;
+    display: none;
+}
+
+.loading-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 800;
+    pointer-events: none;
+    background: transparent;
+}
+
+.loading-screen {
+    position: relative;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: -100%;
+    will-change: top;
+}
+
+.loading-screen,
+.loading-container .rounded-div-wrap.top .rounded-div,
+.loading-container .rounded-div-wrap.bottom .rounded-div {
+    background: var(--color-dark-dark);
+}
+
+.loading-container .rounded-div-wrap.top .rounded-div,
+.loading-container .rounded-div-wrap.bottom .rounded-div {
+    height: 745%;
+}
+
+.loading-container .rounded-div-wrap.top {
+    top: 0;
+    position: absolute;
+    transform: translateY(-99%) scale(1, -1);
+    z-index: 2;
+    height: 0vh;
+    will-change: height;
+}
+
+.loading-container .rounded-div-wrap.bottom {
+    top: unset;
+    bottom: 0;
+    position: absolute;
+    transform: translateY(99%);
+    z-index: 2;
+    height: 0vh;
+    will-change: height;
+}
+
+.loading-container .loading-words {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    pointer-events: none;
+    display: block;
+    will-change: opacity;
+}
+
+.loading-container .loading-words h2 {
+    font-weight: 450;
+    font-style: normal;
+    font-size: calc(clamp(3.25em, 5vw, 4.5em) * 0.75);
+    line-height: 1.065;
+    margin-bottom: 0.66em;
+    margin: 0;
+    padding: 0;
+    color: var(--color-white);
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+    padding-left: 0.6em;
+    white-space: nowrap;
+    padding-right: 0.4em;
+    will-change: opacity;
+}
+
+.loading-container .loading-words h2.jap {
+    font-size: calc(clamp(3.25em, 5vw, 4.5em) * 0.65);
+    transform: translate(-50%, 10%);
+}
+
+.loading-container .dot {
+    display: block;
+    position: absolute;
+    border-radius: 50%;
+    background: var(--color-white);
+    left: 0;
+    top: 47%;
+    bottom: auto;
+    width: calc(clamp(16px, 1.2vw, 19px) / 1.65);
+    height: calc(clamp(16px, 1.2vw, 19px) / 1.65);
+    transform: translate(0, 0) scale(1);
+}
+
+.loading-container .loading-words h2.active {
+    display: block;
+}
+
+.loading-container .loading-words .home-active,
+.loading-container .loading-words .home-active-last {
+    opacity: 0;
+    display: none;
+}
+
+.loading-fade {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 90;
+    background: #fff;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.once-in {
+    will-change: transform;
 }
